Assignment 2: JavaScript Basics complete.

--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,11 @@
     box-sizing: border-box;
 }
 body {
-    font-family: Arial, sans-serif;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100vw;
     height: 100vh;
     background-color: #f0f0f0;
 }
@@ -15,17 +16,18 @@ body {
 .container {
     text-align: center;
     background-color: white;
-    padding: 20px;
+    padding: 15px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    height: fit-content;
 }
 
 input {
     padding: 10px;
-    width: 200px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    margin-bottom: 10px;
+    width: 100%;
+    border: 1px solid #d5d3d3;
+    border-radius: 5px;
+    margin: 12px 0;
     font-size: 16px;
 }
 
@@ -34,9 +36,10 @@ button {
     background-color: #4CAF50;
     color: white;
     border: none;
-    border-radius: 4px;
+    border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
+    margin-top: 8px;
     transition: background-color 0.3s ease;
 }
 
@@ -44,16 +47,32 @@ button:hover {
     background-color: #45a049;
 }
 
+.greet{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    transform: scaleY(0);
+    width: 100%;
+    height: fit-content;
+    margin-top: 5px;
+    gap: 5px;
+}
+
 .greeting {
-    margin-top: 20px;
+    display: none;
+    height: fit-content;
     font-size: 24px;
     opacity: 0;
+    transform: translateY(20px);
     transition: opacity 0.5s ease, transform 0.5s ease;
 }
 
 .show {
+    display: flex;
     opacity: 1;
     transform: translateY(0);
+    transition: display 0.5s ease, transform 0.5s ease;
 }
 
 .error {
